# Cpp_project_example

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
apps/: main.cpp
cmake/Modules/: FindCatch2.cmake
exercises-review/Chapter_3/: exercises.txt  glossary.txt  problems.txt  review.txt
exercises-review/Chapter_4/: review.txt
exercises-review/Chapter_5/: review.txt
include/: build.hpp.in  calculator.hpp  game.hpp  hello.hpp  library.hpp  my.hpp  name_pairs.hpp  name_value.hpp  permutation.hpp  std_lib_facilities.hpp
include/hello/: hello.hpp
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  test.cpp
src/Chapter_10/: calculator_file.cpp  main.cpp  sum_file.cpp
src/Chapter_2/: drill.cpp  exercises.cpp
src/Chapter_3/: age.cpp  convertions.cpp  drill.cpp  exercises.cpp  operations.cpp  repeated_words.cpp
src/Chapter_4/: coins_conversion.cpp  drill4.cpp  exercises_4.cpp  try_this.cpp
src/Chapter_5/: drill5.cpp  exercises_5.cpp
src/Chapter_6/: calculator.cpp  calculator02buggy.cpp  english_gramma.cpp  game.cpp  main.cpp  name_value.cpp  review.txt  token.cpp  token_stream.cpp
src/Chapter_7/: calculator3.cpp
src/Chapter_8/: my.cpp  namespace.cpp  use.cpp
src/Chapter_9/: book.cpp  chrono.cpp  date_use.cpp  file_append.cpp  main.cpp  name_pair.cpp  store_temps.cpp  temp_stats.cpp
src/hello/: CMakeLists.txt  CmakeLists.txt  hello.cpp
src/include/: book.hpp  calculator.hpp  chrono.hpp  english_gramma.hpp  library.hpp  namespace.hpp  patron.hpp  point.hpp  token.hpp  token_stream.hpp
tests/: CMakeLists.txt  test.cpp
tests/hello/: CMakeLists.txt  hello_tests.cpp
tests/helpers/: CMakeLists.txt  test_helpers.cpp
tests/include/: test_helpers.hpp
